# Line_follower_object_oriented_c_plus

./: CMakeLists.txt  README.md
include/: image_processing.h  motor_driver.h
src/: image_processing.cpp  main.cpp  motor_driver.cpp
